--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [flake8]
 max-line-length = 150
-ignore = E266, E265, F632, W293, E501, E701, W504, E303, E301, E251, E128, E101, E722
+ignore = E266, E265, F632, W293, E501, E701, W504, E303, E301, E251, E128, E101, E722, E713
 
 [yapf]
 based_on_style= pep8
